# nxo64

./: .gitignore  README.md  compat.py  elf_sym.py  files.py  nxo64-ida.py  nxo64.py  pyproject.toml  requirements.txt  utils.py
collections/: __init__.py  builder.py  range.py  section.py  segment.py  segment_builder.py
consts/: __init__.py  dt.py  r_aarch64.py  r_arm.py  stb.py  stt.py
files/: __init__.py  bin.py  kip.py  nro.py  nso.py  nxo_base.py
memory/: __init__.py
nxo64/: compat.py  consts.py  files.py  nxo_exceptions.py  symbols.py  utils.py
nxo64/memory/: __init__.py  builder.py
